--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<link rel="stylesheet" href="/src/app/home/home.page.scss">
+<ion-content>
+  <ion-title>Connexion</ion-title>
+  <ion-list>
+    <ion-item>
+      <ion-input placeholder = "Username" [(ngModel)]="username"></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-input placeholder = "Password" type = "password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+    
+    <ion-button (click)="login()">
+      LOG IN
+    </ion-button>
+  </ion-list>
 </ion-content>
