--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,4 @@
-#container {
+/*#container {
   text-align: center;
 
   position: absolute;
@@ -28,4 +28,10 @@
 
 ion-content ion-toolbar {
   --background: translucent;
+}*/ 
+
+
+ion-title{
+  margin-top: 160px;
+  margin-bottom: 10px;
 }
