--- a/src/app/details-user/details-user.page.html
+++ b/src/app/details-user/details-user.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon name="arrow-back" style="zoom:2.5; color: darkblue"  (click)="goToUserList()"></ion-icon>
+    <ion-icon name="arrow-back" style="zoom:2.5; color: darkblue"  (click)="UserDetail()"></ion-icon>
     <ion-title style="color: darkblue; text-align: center; font-size: 25px">User {{ id }}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -35,45 +35,4 @@
         </ion-col>
       </ion-row>
   <hr width="100%">
-
-      <ion-row style="padding-left: 60px;" class="detailTitle">
-        <ion-col size="6">
-          Age :
-        </ion-col>
-        <ion-col size="6" class="detail">
-          {{age}}
-        </ion-col>
-      </ion-row>
-  <hr width="100%">
-
-      <ion-row style="padding-left: 60px;" class="detailTitle">
-        <ion-col size="6">
-          Nationnalité :
-        </ion-col>
-        <ion-col size="6" class="detail">
-          {{nat}}
-        </ion-col>
-      </ion-row>
-  <hr width="100%">
-
-      <ion-row style="padding-left: 60px;" class="detailTitle">
-        <ion-col size="6">
-          Téléphone :
-        </ion-col>
-        <ion-col size="6" class="detail">
-          {{phone}}
-        </ion-col>
-      </ion-row>
-  <hr width="100%">
-
-      <ion-row style="padding-left: 60px;" class="detailTitle">
-        <ion-col size="6">
-          Ville :
-        </ion-col>
-        <ion-col size="6" class="detail">
-          {{ville}}
-        </ion-col>
-      </ion-row>
-  <hr width="100%">
-
 </ion-content>
